# transformerXL_PPO_JAX

./: .gitignore  job.sh  pyproject.toml  train.py  trainer_PPO_trXL.py  trainer_PPO_trXL_pmap.py  transformerXL.py  uv.toml  wrappers.py
