[project]
name = "transformerxl-ppo-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "chex>=0.1.91",
    "craftax>=1.5.0",
    "distrax>=0.1.7",
    "einops>=0.8.2",
    "flax>=0.12.4",
    "gymnasium>=1.2.3",
    "gymnax>=0.0.9",
    "jax[cuda13]>=0.9.0.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.8",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.33",
    "seaborn>=0.13.2",
]
