[project]
name = "transformerxl-ppo-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "chex>=0.1.91",
    "cluv",
    "craftax>=1.5.0",
    "distrax>=0.1.7",
    "einops>=0.8.2",
    "flax>=0.12.4",
    "gymnasium>=1.2.3",
    "gymnax>=0.0.9",
    "jax[cuda13]>=0.9.0.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.8",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.33",
    "seaborn>=0.13.2",
    "simple-parsing>=0.1.8",
]

[tool.uv.sources]
cluv = { path = "../cluv", editable = true }

[tool.cluv]
clusters = [
    "mila",
    "tamia",
    "narval",
    "rorqual",
    "fir",
    # "nibi",  getting weird errors with nibi, (bash: line 1: git-receive-pack: command not found)
    "killarney",
    "vulcan",
    "trillium",
    "trillium-gpu",
]

# [tool.cluv.cluster.tamia]
# gres = "gpu:h100:4"

[tool.uv]
index-strategy = "unsafe-first-match"

[[tool.uv.index]]
name = "drac-gentoo2023-x86-64-v3"
url = "/cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo2023/x86-64-v3"
format = "flat"

[[tool.uv.index]]
name = "drac-gentoo2023-generic"
url = "/cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo2023/generic"
format = "flat"

[[tool.uv.index]]
name = "drac-generic"
url = "/cvmfs/soft.computecanada.ca/custom/python/wheelhouse/generic"
format = "flat"

[[tool.uv.index]]
name = "pypi_secret"
url = "https://www.pypi.org/simple"
default = true
